# rankdock

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
rankdock/: .gitignore  README.md  __init__.py  active_learning.py  environment.yaml  pdbqt.py  pyproject.toml  retrieval.py  sampling.py  score_final.py  validation.py
rankdock/cli/: __init__.py  active_learning.py  embeddings.py  sampling.py
rankdock/data/: README.md  __init__.py  dataset.py  embeddings.py
rankdock/docs/: reproducibility.md
rankdock/examples/: enamine2m_greedy_pairwise.sh
rankdock/models/: __init__.py  gcn_molclr.py  rank_model.py
rankdock/results/: README.md  cumulative_manifest.csv
rankdock/results/cumulative/enamine2m/mlp_greedy/round_cumulative/: round_00_cumulative.csv  round_01_cumulative.csv  round_02_cumulative.csv  round_03_cumulative.csv  round_04_cumulative.csv  round_05_cumulative.csv  round_06_cumulative.csv  round_07_cumulative.csv  round_08_cumulative.csv  round_09_cumulative.csv  round_10_cumulative.csv
rankdock/results/cumulative/enamine2m/pairwise_greedy/round_cumulative/: round_01_cumulative.csv  round_02_cumulative.csv  round_03_cumulative.csv  round_04_cumulative.csv  round_05_cumulative.csv  round_06_cumulative.csv  round_07_cumulative.csv  round_08_cumulative.csv  round_09_cumulative.csv  round_10_cumulative.csv
rankdock/results/cumulative/enamine2m/rf_greedy/round_cumulative/: round_01_cumulative.csv  round_02_cumulative.csv  round_03_cumulative.csv  round_04_cumulative.csv  round_05_cumulative.csv  round_06_cumulative.csv  round_07_cumulative.csv  round_08_cumulative.csv  round_09_cumulative.csv  round_10_cumulative.csv
rankdock/results/summaries/138m/: 138M_model_final_round_top_retrieval_ndcg1pct.csv  138M_model_roundwise_top_retrieval_ndcg1pct.csv  138M_model_roundwise_top_retrieval_ndcg1pct.txt
rankdock/results/summaries/enamine2m/: model_greedy_retrieval.txt  model_greedy_round_retrieval.csv
rankdock/scripts/: concat_embeddings.py  generate_embeddings.py  initial_sampling.py  round_retrieval.py  run_rankdock.py  score_final_compounds.py  transform_smiles.py  validate_embeddings.py
rankdock/utils/: __init__.py  triplets.py
(+20 files in other folders)
