[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rankdock"
version = "0.1.0"
description = "Rank-learning active learning pipeline for large-scale molecular docking screens."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "RankDock contributors"}
]
dependencies = [
  "numpy",
  "pandas",
  "tqdm",
  "torch",
  "gpytorch",
  "rdkit",
  "transformers",
  "scikit-learn",
]

[project.optional-dependencies]
graph = [
  "torch-geometric",
  "torch-scatter",
  "torch-sparse",
  "networkx",
  "torchvision",
]
plots = [
  "matplotlib",
  "scipy",
]

[project.scripts]
rankdock-embed = "cli.embeddings:main"
rankdock-sample = "cli.sampling:main"
rankdock-run = "cli.active_learning:main"
rankdock-retrieval = "retrieval:main"
rankdock-score-final = "score_final:main"

[tool.setuptools]
py-modules = [
  "active_learning",
  "pdbqt",
  "retrieval",
  "sampling",
  "score_final",
  "validation",
]

[tool.setuptools.packages.find]
include = ["cli*", "data*", "models*", "utils*"]
